Solved inuit layout issues and deleted test page

--- a/css/developer-site.scss
+++ b/css/developer-site.scss
@@ -89,6 +89,7 @@ that we need to piece together in the correct order:
 
 $inuit-enable-layout--huge: true;
 $inuit-enable-layout--rev: true;
+$inuit-enable-layout--flush: true;
 @import "node_modules/inuit-layout/objects.layout";
 @import "node_modules/inuit-box/objects.box.scss";
 @import "node_modules/inuit-buttons/objects.buttons";
